@@ -22,7 +22,7 @@
         <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;org.firebirdsql.jdbc&lt;/groupId&gt;
     &lt;artifactId&gt;jaybird&lt;/artifactId&gt;
-    &lt;version&gt;5.0.5.java8&lt;/version&gt;
+    &lt;version&gt;5.0.6.java8&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre>Quizás ya tengas este código en tu <i>pom.xml</i> pero comentado, en ese caso simplemente descoméntalo.</div>
       <div class="wiki" style="display: block;"> </div>
