@@ -26,7 +26,7 @@
       <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;com.mysql&lt;/groupId&gt;
     &lt;artifactId&gt;mysql-connector-j&lt;/artifactId&gt;
-    &lt;version&gt;9.0.0&lt;/version&gt;
+    &lt;version&gt;9.1.0&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre>Maybe the above code is already in your <i>pom.xml</i> but commented, in that case just uncomment it.</div>
     <div class="wiki" style="display: block;"> </div>
