@@ -26,7 +26,7 @@
         <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;com.mysql&lt;/groupId&gt;
     &lt;artifactId&gt;mysql-connector-j&lt;/artifactId&gt;
-    &lt;version&gt;9.0.0&lt;/version&gt;
+    &lt;version&gt;9.1.0&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre>Quizás ya tengas este código en tu <i>pom.xml</i> pero comentado, en ese caso simplemente descoméntalo.</div>
       <div class="wiki" style="display: block;"> </div>
